--- a/index.html
+++ b/index.html
@@ -18,5 +18,21 @@ wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,4
     <header>
       <a href="index.html">Your Logo</a>
     </header>
+    <main>
+      <section>
+        <div class="container">
+          <div class="info">
+            <h1>Sign in to </h1>
+            <p class="description">Lorem Ipsum is simply</p>
+            <p class="if-have-an-account">
+              If you don’t have an account register
+              <br>
+              You can   <a href="signup.html">Register here !</a>
+            </p>
+          </div>
+          <div class="form"></div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
